# mycorrhizal

./: .gitignore  .readthedocs.yaml  CIRCUIT_BREAKER_EXAMPLE_SUMMARY.md  README.md  mkdocs.yml  pyproject.toml  test_subtree_mycelium.py
.github/workflows/: test.yml
docs/: index.md
docs/api/: common.md  enoki.md  hypha.md  index.md  rhizomorph.md  septum.md  spores.md
docs/assets/stylesheets/: extra.css
docs/enoki/: index.md
docs/getting-started/: index.md  installation.md  your-first-enoki.md  your-first-hypha.md  your-first-mycelium.md  your-first-rhizomorph.md  your-first-septum.md  your-first-spores.md
docs/guides/: best-practices.md  blackboards.md  composition.md  index.md  observability.md  programmatic-hypha.md  septum-pda-guide.md  timebases.md
docs/hypha/: index.md
docs/mycelium/: index.md
docs/rhizomorph/: index.md
docs/septum/: index.md  production.md  troubleshooting.md
docs/spores/: index.md
examples/: README.md  cordy_demo.py  cordyceps_demo.py  enoki_decorator_basic.py  enoki_decorator_timeout.py  enoki_example.py  fork_join_demo.py  hypha_demo.py  minimal_demo.py  minimal_hypha_demo.py  programmatic_hypha_demo.py  rhizomorph_example.py
examples/interfaces/: interface_dsl_demo.py
examples/mycelium/: README.md  README_circuit_breaker.md  bt_in_pn_with_spores.py  ci_cd_orchestrator.py  circuit_breaker_handler.py  fsm_in_bt_with_spores.py  job_queue_processor.py  robot_controller.py  simple_fsm_in_pn.py  state_snapshots_with_spores.py
examples/rhizomorph/: config_driven_tree_demo.py  example_parallel.py  example_trace_mode.py  example_try_catch.py  mermaid_serialization_demo.py  programmatic_tree_demo.py  rhizomorph_example.py  rhizomorph_interface_demo.py
examples/septum/: network_protocol_fsm.py  septum_decorator_basic.py  septum_decorator_timeout.py
examples/spores/: comprehensive_rhizomorph_spores_demo.py  enoki_spores_example.py  hypha_spores_example.py  rhizomorph_spores_example.py  septum_spores_example.py  standalone_spores_demo.py  standalone_sync_demo.py
src/cordyceps/: __init__.py  cordyceps.py  core.py  guard_test.py  util.py
src/mycorrhizal/: __init__.py
src/mycorrhizal/benchmarks/: README.md  bench_septum.py  run_benchmarks.py
src/mycorrhizal/common/: __init__.py  cache.py  compilation.py  interface_builder.py  interface_detection.py  interfaces.py  mermaid.py  timebase.py  wrappers.py
src/mycorrhizal/enoki/: TRANSITION_REFERENCE.md  __init__.py  core.py  enoki.py  testing_utils.py  util.py
src/mycorrhizal/hypha/: __init__.py  core.py  util.py
src/mycorrhizal/hypha/core/: __init__.py  builder.py  runtime.py  specs.py
src/mycorrhizal/mycelium/: __init__.py  core.py  exceptions.py  hypha_bridge.py  instance.py  pn_context.py  runner.py  spores_integration.py  tree_builder.py  tree_spec.py
src/mycorrhizal/rhizomorph/: README.md  __init__.py  core.py  util.py
src/mycorrhizal/septum/: TRANSITION_REFERENCE.md  core.py  testing_utils.py  util.py
src/mycorrhizal/spores/: __init__.py  cache.py  core.py  extraction.py  models.py
src/mycorrhizal/spores/dsl/: __init__.py  enoki.py  hypha.py  rhizomorph.py  septum.py
src/mycorrhizal/spores/encoder/: __init__.py  base.py  json.py
src/mycorrhizal/spores/transport/: __init__.py  base.py  file.py
tests/: test_core.py  test_decorator_basic.py  test_enoki.py  test_enoki_interfaces.py  test_guard.py  test_hypha_interfaces_simple.py  test_interface_builder.py  test_interfaces.py  test_rhizomorph.py  test_rhizomorph_interfaces.py  test_state_machine.py  test_state_registry.py  test_util.py
tests/benchmarks/: README.md  __init__.py  bench_hypha.py  bench_rhizomorph.py  run_benchmarks.py
tests/common/: test_compilation.py  test_util.py  test_wrappers.py
tests/enoki/: test_decorator_basic.py  test_state_machine.py  test_state_registry.py
tests/hypha/: conftest.py  test_bt_integration.py  test_concurrency.py  test_edge_cases.py  test_fsm_in_pn_mermaid.py  test_hypha.py  test_hypha_interfaces.py  test_hypha_interfaces_simple.py  test_memory_leaks.py  test_place_decorator.py  test_programmatic_hypha.py
tests/interfaces/: test_interfaces.py
tests/mycelium/: test_core.py  test_spores_integration.py
tests/rhizomorph/: conftest.py  test_decorator_syntax.py  test_direct_call_composites.py  test_rhizomorph.py  test_rhizomorph_interfaces.py  test_trace_mode.py  test_tree_builder_features.py
tests/septum/: conftest.py  dummy_test.py  run_benchmarks.py  test_benchmarks.py  test_circular_imports.py  test_decorator_basic.py  test_septum_interfaces.py  test_state_machine.py  test_state_registry.py
tests/septum/fixtures/: __init__.py  circular_a.py  circular_b.py
tests/septum/integration/: test_mycelium_composition.py
tests/spores/: test_cache_eviction.py  test_concurrency.py  test_spores.py  test_spores_dsl.py  test_timestamp_format.py
