[project]
name = "mycorrhizal"
version = "0.1.0"
description = "Utilities and DSLs for modelling and implementing safe, performant, structured systems"
readme = "README.md"
authors = [{ name = "Jeff Ciesielski", email = "jeffciesielski@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "typeguard==4.4.4",
    "pydantic>=2.11.7",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
]


[tool.hatch.build]
exclude = ["examples/*", "tests/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src/mycorrhizal",
    "--cov-report=term",
    "--cov-report=html"
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests",
    "unit: marks tests as unit tests",
]
timeout = 30

# Coverage configuration
[tool.coverage.run]
source = ["mycorrhizal"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
show_missing = false
skip_covered = true
precision = 2
fail_under = 0
