[project]
name = "mycorrhizal"
dynamic = ["version"]
description = "Utilities and DSLs for modelling and implementing safe, performant, structured systems"
readme = "README.md"
authors = [{ name = "Jeff Ciesielski", email = "jeffciesielski@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "typeguard==4.4.4",
    "pydantic>=2.11.7",
]


[tool.hatch.build]
exclude = ["examples/*", "tests/*"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/mycorrhizal/_version.py"
template = """
version = "{version}"
"""

[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pylance>=1.0.2",
    "pyright>=1.1.408",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "ruff>=0.14.13",
]

[project.optional-dependencies]
# Documentation dependencies for Read the Docs
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs-table-reader-plugin>=2.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src/mycorrhizal",
    "--cov-report=term",
    "--cov-report=html"
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests",
    "unit: marks tests as unit tests",
]
timeout = 30

# Coverage configuration
[tool.coverage.run]
source = ["mycorrhizal"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
show_missing = false
skip_covered = true
precision = 2
fail_under = 0
